<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--APPLICATION STRINGS-->
    <string name="app_name" translatable="false">Football Scores</string>
    <string name="action_settings">Settings</string>

    <!--PAGER STRINGS-->
    <string name="test_text">Test</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="tomorrow">Tomorrow</string>

    <!--LEAGUE STRINGS-->
    <string name="champions_league" translatable="false">UEFA Champions League</string>
    <string name="bundesliga" translatable="false">Bundesliga</string>
    <string name="premierleague" translatable="false">Premier League</string>
    <string name="primeradivison" translatable="false">Primera Division</string>
    <string name="seriaa" translatable="false">Serie A</string>
    <string name="unknownleague">Unknown League - Please Report</string>

    <!--MATCH STRINGS-->
    <string name="matchday_text">Match Day</string>
    <string name="group_stage_text">Group Stages</string>
    <string name="first_knockout_round">First Knockout Round</string>
    <string name="quarter_final">Quarterfinal</string>
    <string name="semi_final">Semifinal</string>
    <string name="final_text">Final</string>
    <string name="share_text">Share</string>

    <!--DUMMY DATA STRING-->
    <string name="dummy_data" translatable="false">{\"timeFrameStart\":\"2015-06-18\",\"timeFrameEnd\":\"2015-06-19\",\"count\":1,\"fixtures\":[{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}}]}</string>

    <!--ABOUT STRINGS-->
    <string name="about">About</string>
    <string name="about_text">This application retrieves football match scores for the several major football leagues, including the Premier League, Seria A, Bundesliga, Primera Division, and the UEFA Champions League.\n\n
        All match data is acquired from football-data.org.\n\n
        All team logos are used from http://hdlogo.wordpress.com/ with permission.\n\n
        The original version of this app was created by Yahia Khalid Ibn El Walid Ahmed; a modified version is given to students in the Udacity Android Nanodegree program.\n\n
        To report any bugs or suggestions, please send your inquires to y.k.ibnelwalid@gmail.com.\n\n
        During the offseason, fake data will be added to the app.
    </string>

    <!--WIDGET STRINGS-->
    <string name="football_scores_widget" translatable="false">Football Scores</string>
    <string name="football_scores_widget_subheader">Matches</string>

    <!-- CONTENT DESCRIPTION STRINGS -->
    <string name="share_button_description">Share this game\'s details with other applications.</string>
    <string name="about_image_description">Football Scores Logo</string>
    <string name="scores_list_home_crest_description">Home Team Crest</string>
    <string name="scores_list_away_crest_description">Away Team Crest</string>
    <string name="widget_icon_description">Football Scores Icon</string>
    <string name="widget_header_description">Football Scores</string>
    <string name="widget_subheader_description">Matches</string>
    <string name="widget_list_description">Match List</string>

</resources>