<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/match_list_widget_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#BBFFECC0"
        android:orientation="vertical"
        android:id="@+id/match_list_widget_layout_container">

        <LinearLayout
            android:id="@+id/match_list_widget_header_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#AAFFA726"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingStart="8dp"
            android:paddingRight="8dp"
            android:paddingEnd="8dp">

            <ImageView
                android:id="@+id/match_list_widget_header_icon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_launcher"
                android:contentDescription="@string/widget_icon_description" />

            <LinearLayout
                android:id="@+id/match_list_widget_header_subcontainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingBottom="4dp"
                android:paddingLeft="8dp"
                android:paddingStart="8dp"
                android:paddingRight="8dp"
                android:paddingEnd="8dp"
                android:paddingTop="4dp" >

                <TextView
                    android:id="@+id/match_list_widget_header_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:contentDescription="@string/widget_header_description" />

                <TextView
                    android:id="@+id/match_list_widget_header_subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/football_scores_widget_subheader"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@android:color/black"
                    android:contentDescription="@string/widget_subheader_description" />
            </LinearLayout>
        </LinearLayout>

        <ListView
            android:id="@+id/match_list_widget_collection_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/widget_list_description" >
        </ListView>

    </LinearLayout>
</FrameLayout>