<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="4dp"
    android:id="@+id/scores_list_item_layout">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="8dp"
        card_view:cardPreventCornerOverlap="false"
        card_view:cardUseCompatPadding="true"
        android:elevation="8dp"
        android:padding="8dp"
        android:id="@+id/match_list_item_cardview_container"
        tools:targetApi="honeycomb">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:baselineAligned="false"
            android:id="@+id/match_container">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:id="@+id/home_team_container">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/scores_list_home_crest_description"
                    android:id="@+id/home_crest"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="@dimen/TeamNames"
                    android:gravity="center"
                    android:text="@string/test_text"
                    android:id="@+id/home_name"
                    android:textColor="@android:color/black"
                    android:typeface="sans" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:id="@+id/game_score_container">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/test_text"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="@dimen/Score"
                    android:id="@+id/score_textview"
                    android:textColor="@android:color/black"
                    android:typeface="sans" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/test_text"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:id="@+id/data_textview"
                    android:textColor="@android:color/black"
                    android:typeface="sans" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:id="@+id/away_team_container">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/scores_list_away_crest_description"
                    android:id="@+id/away_crest"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/test_text"
                    android:textSize="@dimen/TeamNames"
                    android:id="@+id/away_name"
                    android:textColor="@android:color/black"
                    android:typeface="sans" />
            </LinearLayout>
        </LinearLayout>

        </android.support.v7.widget.CardView>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/details_fragment_container">
    </FrameLayout>
</LinearLayout>